# biliterm

./: .gitignore  Cargo.toml  readme.md
src/: error.rs  main.rs  style.rs
src/event/: mod.rs
src/modal/: mod.rs
src/page/: liveroom.rs  login.rs  mod.rs
src/service/: webapi.rs
src/view/: mod.rs
